[metadata]
name = {{ cookiecutter.module_name }}
version = attr: {{ cookiecutter.module_name }}.__version__
description = {{ cookiecutter.description }}
long_description = file:README.md
long_description_content_type = text/markdown
{% if cookiecutter.author -%}
author = {{ cookiecutter.author }}
{% endif -%}
{% if cookiecutter.email -%}
author_email = {{ cookiecutter.email }}
{% endif -%}
{% if cookiecutter.homepage -%}
url = {{ cookiecutter.homepage }}
{% endif -%}
classifiers = 
  Development Status :: 4 - Beta
  Programming Language :: Python
  Programming Language :: Python :: 3
  {%- for version in (range(cookiecutter.min_python | replace('3.', '') | int, 11) | list) %}
  Programming Language :: Python :: 3.{{ version }}
  {%- endfor %}
  {%- if cookiecutter.license == "MIT - simple and permissive" %}
  License :: OSI Approved :: MIT License
  {%- elif cookiecutter.license == "Apache - explicitly grants patent rights" %}
  License :: OSI Approved :: Apache Software License
  {%- elif cookiecutter.license == "GPL - ensures that code based on this is shared with the same terms" %}
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  {%- endif %}

[options]
python_requires = >= {{ cookiecutter.min_python }}

# Specify the packages required by the project. For libraries, the constraints
# should be loosely defined as too narrow constraints will make it hard to
# install the package together with other libraries and will prevent users from
# getting security updates.
{% if cookiecutter.service == "y" -%}
# For services, the dependencies (including transitive) should be compiled with
# pip-tools. See requirements.txt for details.
{%- endif %}
{% if cookiecutter.cli == "y" -%}
install_requires = 
  typer<1
{% else -%}
# install_requires =
#   some_package>1,<2
{%- endif %}

# Find the packages in the src folder.
packages = find:
package_dir = 
  =src

[options.packages.find]
where = src

{% if cookiecutter.cli == "y" %}
# Define the entrypoints/cli command for the project. Multiple entrypoints can
# be defined.
[options.entry_points]
console_scripts = 
  {{ cookiecutter.module_name }} = {{ cookiecutter.module_name }}:app
{%- endif %}
